src/gen/ReactParser.java
// Generated from C:/Users/ASUS/Desktop/compiler functional/Final/src/antlr/ReactParser.g4 by ANTLR 4.13.1
package gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ReactParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IMPORT=1, FROM=2, PATH=3, FUNCTION=4, CONST=5, LET=6, VAR=7, CONSOLELOG=8, 
		EQ=9, STYLE=10, SRC=11, REQUIRE=12, EXPORT=13, SEMICOLON=14, O_SQUARE_BRACKET=15, 
		C_SQUARE_BRACKET=16, O_CARLY=17, C_CARLY=18, DOUBLE_O_CARLY=19, DOUBLE_C_CARLY=20, 
		O_BRACKET=21, C_BRACKET=22, RETURN=23, COLON=24, POINT=25, ARROW=26, ARROW_FUNCTION=27, 
		COMMA=28, NUMBER=29, IDENTIFIER=30, STRING=31, WS=32, NEW_LINE=33, MULTI_LINE_COMMENT=34, 
		COMMENT=35, SLASH=36, JSX_TAG=37, CLOSE_TAG=38, JSX_CLOSE_TAG=39, ATTRIBUTE=40;
	public static final int
		RULE_program = 0, RULE_importStatment = 1, RULE_exportStatement = 2, RULE_functionalDelaration = 3, 
		RULE_functionalbody = 4, RULE_variableDeclaration = 5, RULE_expression = 6, 
		RULE_hooks = 7, RULE_state = 8, RULE_ref = 9, RULE_effect = 10, RULE_stateFields = 11, 
		RULE_handlerEvent = 12, RULE_parameters = 13, RULE_eventBody = 14, RULE_jsxElement = 15, 
		RULE_jsxSelfCloseTag = 16, RULE_jsxTag = 17, RULE_jsxAttributes = 18, 
		RULE_jsxContent = 19, RULE_jsxAttribute = 20, RULE_jsxstyleAttribute = 21, 
		RULE_jsxsrcAttribute = 22, RULE_attributeValue = 23, RULE_styleValue = 24, 
		RULE_srcValue = 25, RULE_jsFunction = 26, RULE_functionBody = 27, RULE_arguments = 28;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "importStatment", "exportStatement", "functionalDelaration", 
			"functionalbody", "variableDeclaration", "expression", "hooks", "state", 
			"ref", "effect", "stateFields", "handlerEvent", "parameters", "eventBody", 
			"jsxElement", "jsxSelfCloseTag", "jsxTag", "jsxAttributes", "jsxContent", 
			"jsxAttribute", "jsxstyleAttribute", "jsxsrcAttribute", "attributeValue", 
			"styleValue", "srcValue", "jsFunction", "functionBody", "arguments"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'import'", "'from'", null, "'function'", "'const'", "'let'", "'var'", 
			"'console.log'", "'='", "'style='", "'src='", "'require'", "'export default'", 
			"';'", "'['", "']'", "'{'", "'}'", "'{{'", "'}}'", "'('", "')'", "'return'", 
			"':'", "'.'", "'=>'", "'()=> '", "','", null, null, null, null, null, 
			null, "'//'", "'/'", null, "'>'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IMPORT", "FROM", "PATH", "FUNCTION", "CONST", "LET", "VAR", "CONSOLELOG", 
			"EQ", "STYLE", "SRC", "REQUIRE", "EXPORT", "SEMICOLON", "O_SQUARE_BRACKET", 
			"C_SQUARE_BRACKET", "O_CARLY", "C_CARLY", "DOUBLE_O_CARLY", "DOUBLE_C_CARLY", 
			"O_BRACKET", "C_BRACKET", "RETURN", "COLON", "POINT", "ARROW", "ARROW_FUNCTION", 
			"COMMA", "NUMBER", "IDENTIFIER", "STRING", "WS", "NEW_LINE", "MULTI_LINE_COMMENT", 
			"COMMENT", "SLASH", "JSX_TAG", "CLOSE_TAG", "JSX_CLOSE_TAG", "ATTRIBUTE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ReactParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ReactParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public FunctionalDelarationContext functionalDelaration() {
			return getRuleContext(FunctionalDelarationContext.class,0);
		}
		public List<ImportStatmentContext> importStatment() {
			return getRuleContexts(ImportStatmentContext.class);
		}
		public ImportStatmentContext importStatment(int i) {
			return getRuleContext(ImportStatmentContext.class,i);
		}
		public List<ExportStatementContext> exportStatement() {
			return getRuleContexts(ExportStatementContext.class);
		}
		public ExportStatementContext exportStatement(int i) {
			return getRuleContext(ExportStatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) return ((ReactParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(58);
				importStatment();
				}
				}
				setState(61); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IMPORT );
			setState(63);
			functionalDelaration();
			setState(65); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(64);
				exportStatement();
				}
				}
				setState(67); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==EXPORT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportStatmentContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(ReactParser.IMPORT, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(ReactParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(ReactParser.IDENTIFIER, i);
		}
		public TerminalNode FROM() { return getToken(ReactParser.FROM, 0); }
		public TerminalNode PATH() { return getToken(ReactParser.PATH, 0); }
		public TerminalNode SEMICOLON() { return getToken(ReactParser.SEMICOLON, 0); }
		public List<TerminalNode> COMMA() { return getTokens(ReactParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ReactParser.COMMA, i);
		}
		public TerminalNode O_CARLY() { return getToken(ReactParser.O_CARLY, 0); }
		public TerminalNode C_CARLY() { return getToken(ReactParser.C_CARLY, 0); }
		public ImportStatmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStatment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterImportStatment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitImportStatment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) return ((ReactParserVisitor<? extends T>)visitor).visitImportStatment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportStatmentContext importStatment() throws RecognitionException {
		ImportStatmentContext _localctx = new ImportStatmentContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_importStatment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(IMPORT);
			setState(70);
			match(IDENTIFIER);
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(71);
				match(COMMA);
				setState(72);
				match(O_CARLY);
				setState(73);
				match(IDENTIFIER);
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(74);
					match(COMMA);
					setState(75);
					match(IDENTIFIER);
					}
					}
					setState(80);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(81);
				match(C_CARLY);
				}
			}

			setState(84);
			match(FROM);
			setState(85);
			match(PATH);
			setState(86);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExportStatementContext extends ParserRuleContext {
		public TerminalNode EXPORT() { return getToken(ReactParser.EXPORT, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ReactParser.IDENTIFIER, 0); }
		public TerminalNode SEMICOLON() { return getToken(ReactParser.SEMICOLON, 0); }
		public ExportStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exportStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterExportStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitExportStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) return ((ReactParserVisitor<? extends T>)visitor).visitExportStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExportStatementContext exportStatement() throws RecognitionException {
		ExportStatementContext _localctx = new ExportStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_exportStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(EXPORT);
			setState(89);
			match(IDENTIFIER);
			setState(90);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionalDelarationContext extends ParserRuleContext {
		public TerminalNode O_CARLY() { return getToken(ReactParser.O_CARLY, 0); }
		public FunctionalbodyContext functionalbody() {
			return getRuleContext(FunctionalbodyContext.class,0);
		}
		public TerminalNode C_CARLY() { return getToken(ReactParser.C_CARLY, 0); }
		public TerminalNode FUNCTION() { return getToken(ReactParser.FUNCTION, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ReactParser.IDENTIFIER, 0); }
		public TerminalNode O_BRACKET() { return getToken(ReactParser.O_BRACKET, 0); }
		public TerminalNode C_BRACKET() { return getToken(ReactParser.C_BRACKET, 0); }
		public TerminalNode CONST() { return getToken(ReactParser.CONST, 0); }
		public TerminalNode EQ() { return getToken(ReactParser.EQ, 0); }
		public TerminalNode ARROW_FUNCTION() { return getToken(ReactParser.ARROW_FUNCTION, 0); }
		public FunctionalDelarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionalDelaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterFunctionalDelaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitFunctionalDelaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) return ((ReactParserVisitor<? extends T>)visitor).visitFunctionalDelaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionalDelarationContext functionalDelaration() throws RecognitionException {
		FunctionalDelarationContext _localctx = new FunctionalDelarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_functionalDelaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FUNCTION:
				{
				setState(92);
				match(FUNCTION);
				setState(93);
				match(IDENTIFIER);
				setState(94);
				match(O_BRACKET);
				setState(95);
				match(C_BRACKET);
				}
				break;
			case CONST:
				{
				setState(96);
				match(CONST);
				setState(97);
				match(IDENTIFIER);
				setState(98);
				match(EQ);
				setState(99);
				match(ARROW_FUNCTION);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(102);
			match(O_CARLY);
			setState(103);
			functionalbody();
			setState(104);
			match(C_CARLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionalbodyContext extends ParserRuleContext {
		public TerminalNode RETURN() { return getToken(ReactParser.RETURN, 0); }
		public TerminalNode O_BRACKET() { return getToken(ReactParser.O_BRACKET, 0); }
		public JsxElementContext jsxElement() {
			return getRuleContext(JsxElementContext.class,0);
		}
		public TerminalNode C_BRACKET() { return getToken(ReactParser.C_BRACKET, 0); }
		public TerminalNode SEMICOLON() { return getToken(ReactParser.SEMICOLON, 0); }
		public List<VariableDeclarationContext> variableDeclaration() {
			return getRuleContexts(VariableDeclarationContext.class);
		}
		public VariableDeclarationContext variableDeclaration(int i) {
			return getRuleContext(VariableDeclarationContext.class,i);
		}
		public List<HooksContext> hooks() {
			return getRuleContexts(HooksContext.class);
		}
		public HooksContext hooks(int i) {
			return getRuleContext(HooksContext.class,i);
		}
		public List<HandlerEventContext> handlerEvent() {
			return getRuleContexts(HandlerEventContext.class);
		}
		public HandlerEventContext handlerEvent(int i) {
			return getRuleContext(HandlerEventContext.class,i);
		}
		public FunctionalbodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionalbody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterFunctionalbody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitFunctionalbody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) return ((ReactParserVisitor<? extends T>)visitor).visitFunctionalbody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionalbodyContext functionalbody() throws RecognitionException {
		FunctionalbodyContext _localctx = new FunctionalbodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_functionalbody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1073742048L) != 0)) {
				{
				setState(109);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					setState(106);
					variableDeclaration();
					}
					break;
				case 2:
					{
					setState(107);
					hooks();
					}
					break;
				case 3:
					{
					setState(108);
					handlerEvent();
					}
					break;
				}
				}
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(114);
			match(RETURN);
			setState(115);
			match(O_BRACKET);
			setState(116);
			jsxElement();
			setState(117);
			match(C_BRACKET);
			setState(118);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableDeclarationContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ReactParser.IDENTIFIER, 0); }
		public TerminalNode SEMICOLON() { return getToken(ReactParser.SEMICOLON, 0); }
		public TerminalNode CONST() { return getToken(ReactParser.CONST, 0); }
		public TerminalNode LET() { return getToken(ReactParser.LET, 0); }
		public TerminalNode VAR() { return getToken(ReactParser.VAR, 0); }
		public TerminalNode EQ() { return getToken(ReactParser.EQ, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public VariableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterVariableDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitVariableDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) return ((ReactParserVisitor<? extends T>)visitor).visitVariableDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableDeclarationContext variableDeclaration() throws RecognitionException {
		VariableDeclarationContext _localctx = new VariableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_variableDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 224L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(121);
			match(IDENTIFIER);
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EQ) {
				{
				setState(122);
				match(EQ);
				setState(123);
				expression();
				}
			}

			setState(126);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ReactParser.IDENTIFIER, 0); }
		public TerminalNode NUMBER() { return getToken(ReactParser.NUMBER, 0); }
		public TerminalNode STRING() { return getToken(ReactParser.STRING, 0); }
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) return ((ReactParserVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 3758096384L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HooksContext extends ParserRuleContext {
		public StateContext state() {
			return getRuleContext(StateContext.class,0);
		}
		public RefContext ref() {
			return getRuleContext(RefContext.class,0);
		}
		public EffectContext effect() {
			return getRuleContext(EffectContext.class,0);
		}
		public HooksContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_hooks; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterHooks(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitHooks(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) return ((ReactParserVisitor<? extends T>)visitor).visitHooks(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HooksContext hooks() throws RecognitionException {
		HooksContext _localctx = new HooksContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_hooks);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(130);
				state();
				}
				break;
			case 2:
				{
				setState(131);
				ref();
				}
				break;
			case 3:
				{
				setState(132);
				effect();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StateContext extends ParserRuleContext {
		public TerminalNode CONST() { return getToken(ReactParser.CONST, 0); }
		public TerminalNode O_SQUARE_BRACKET() { return getToken(ReactParser.O_SQUARE_BRACKET, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(ReactParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(ReactParser.IDENTIFIER, i);
		}
		public TerminalNode COMMA() { return getToken(ReactParser.COMMA, 0); }
		public TerminalNode C_SQUARE_BRACKET() { return getToken(ReactParser.C_SQUARE_BRACKET, 0); }
		public TerminalNode EQ() { return getToken(ReactParser.EQ, 0); }
		public TerminalNode O_BRACKET() { return getToken(ReactParser.O_BRACKET, 0); }
		public TerminalNode C_BRACKET() { return getToken(ReactParser.C_BRACKET, 0); }
		public TerminalNode SEMICOLON() { return getToken(ReactParser.SEMICOLON, 0); }
		public StateFieldsContext stateFields() {
			return getRuleContext(StateFieldsContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode O_CARLY() { return getToken(ReactParser.O_CARLY, 0); }
		public TerminalNode C_CARLY() { return getToken(ReactParser.C_CARLY, 0); }
		public StateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_state; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterState(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitState(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) return ((ReactParserVisitor<? extends T>)visitor).visitState(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StateContext state() throws RecognitionException {
		StateContext _localctx = new StateContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_state);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(CONST);
			setState(136);
			match(O_SQUARE_BRACKET);
			setState(137);
			match(IDENTIFIER);
			setState(138);
			match(COMMA);
			setState(139);
			match(IDENTIFIER);
			setState(140);
			match(C_SQUARE_BRACKET);
			setState(141);
			match(EQ);
			setState(142);
			match(IDENTIFIER);
			setState(143);
			match(O_BRACKET);
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==O_CARLY) {
				{
				setState(144);
				match(O_CARLY);
				}
			}

			setState(149);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(147);
				stateFields();
				}
				break;
			case 2:
				{
				setState(148);
				expression();
				}
				break;
			}
			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==C_CARLY) {
				{
				setState(151);
				match(C_CARLY);
				}
			}

			setState(154);
			match(C_BRACKET);
			setState(155);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
